...
    <string name="app_name">Library</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_book">CreateBookActivity</string>
    <string name="books_title">Book\'s title</string>
    <string name="books_author">Book\'s author</string>
    <string name="books_read">Is read</string>
    <string name="empty_fields_message">Fields can\'t be empty</string>
    <string name="empty_fields_title">Empty Fields</string>
    <string name="add_book">Add Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="isbn_book">Isbn</string>
    <string name="remote_library">Remote Library</string>
    <string name="show_remote_library">Show remote library</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
...
